[package]
name = "scansector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coordinates = "0.3.1"
eframe = { version = "0.20.1", features = ["persistence"] }
json = "0.12.4"
rfd = "0.11.0"
roxmltree = "0.18.0"
